[tool.poetry]
name = "dotenev"
version = "0.1.0"
description = ""
authors = ["qellyka <qellyka@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "<3"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
